--- a/eas.json
+++ b/eas.json
@@ -9,7 +9,11 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_USE_LEGACY_PEER_DEPS": "1"
+      }
+      
     },
     "production": {
       "autoIncrement": true
