--- a/package.json
+++ b/package.json
@@ -33,5 +33,14 @@
     "react-native-svg-transformer": "^1.5.1",
     "typescript": "~5.8.3"
   },
+  "expo": {
+     "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": ["@rneui/base", "@rneui/themed"]
+      }
+    }
+  }
+  },
   "private": true
 }
