--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
-      "resizeMode": "contain",
+      "resizeMode": "center",
       "backgroundColor": "#E7A800"
     },
     "ios": {
