--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
+    "axios": "^1.10.0",
     "expo": "~53.0.9",
     "expo-dev-client": "~5.1.8",
     "expo-image-picker": "~16.1.4",
