--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@react-navigation/stack": "^7.3.2",
     "axios": "^1.10.0",
     "expo": "~53.0.9",
+    "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.1.8",
+    "expo-device": "~7.1.4",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
+    "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2"
