--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
-      "resizeMode": "center",
+      "resizeMode": "contain",
       "backgroundColor": "#E7A800"
     },
     "ios": {
@@ -21,7 +21,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.trainee05.Technicianpro"
+      "package": "com.trainee05.Technicianpro",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./assets/favicon.png"
