--- a/package.json
+++ b/package.json
@@ -10,28 +10,29 @@
     "generate:icons": "node scripts/generateIconMap.js"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
     "axios": "^1.10.0",
-    "expo": "~53.0.9",
+    "expo": "53.0.22",
     "expo-constants": "~17.1.7",
-    "expo-dev-client": "~5.1.8",
+    "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
     "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.4",
+    "expo-linear-gradient": "~14.1.5",
     "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-calendars": "^1.1312.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.10.0",
-    "react-native-svg": "15.11.2"
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "expo-image": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
