--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "generate:icons": "node scripts/generateIconMap.js"
   },
   "dependencies": {
+    "@appandflow/react-native-magic-scroll": "^0.1.36",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
     "axios": "^1.10.0",
+    "check": "^1.0.0",
     "expo": "53.0.22",
+    "expo-asset": "~11.1.7",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
+    "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-notifications": "~0.31.4",
@@ -28,11 +32,11 @@
     "react-native-calendars": "^1.1312.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-picker": "^8.2.1",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "expo-image": "~2.4.0"
+    "react-native-reanimated": "~3.17.4",
+    "expo-screen-orientation": "~8.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
