--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-reanimated": "~3.17.4",
-    "expo-screen-orientation": "~8.1.7"
+    "expo-screen-orientation": "~8.1.7",
+    "@expo/vector-icons": "^14.1.0",
+    "expo-font": "~13.3.2",
+    "expo-location": "~18.1.6",
+    "expo-maps": "~0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
