--- a/app.json
+++ b/app.json
@@ -64,6 +64,10 @@
       ],
       "expo-font",
       "expo-maps"
+    ],
+    "assetBundlePatterns": [
+      "**/*",
+      "./node_modules/@expo/vector-icons/build/vendor/react-native-vector-icons/Fonts/*.ttf"
     ]
   }
 }
