--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "@expo/vector-icons": "^14.1.0",
     "expo-font": "~13.3.2",
     "expo-location": "~18.1.6",
-    "expo-maps": "~0.11.0"
+    "expo-maps": "~0.11.0",
+    "expo-file-system": "~18.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
