--- a/app.json
+++ b/app.json
@@ -63,7 +63,7 @@
         }
       ],
       "expo-font",
-      "expo-maps"
+      "expo-maps",
     ],
     "assetBundlePatterns": [
       "**/*",
