--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@appandflow/react-native-magic-scroll": "^0.1.36",
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
@@ -22,26 +23,26 @@
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
+    "expo-file-system": "~18.1.11",
+    "expo-font": "~13.3.2",
     "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
+    "expo-location": "~18.1.6",
+    "expo-maps": "~0.11.0",
     "expo-notifications": "~0.31.4",
+    "expo-screen-orientation": "~8.1.7",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-calendars": "^1.1312.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
-    "react-native-reanimated": "~3.17.4",
-    "expo-screen-orientation": "~8.1.7",
-    "@expo/vector-icons": "^14.1.0",
-    "expo-font": "~13.3.2",
-    "expo-location": "~18.1.6",
-    "expo-maps": "~0.11.0",
-    "expo-file-system": "~18.1.11"
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
